Fix extra padding bellow section container

--- a/src/main.scss
+++ b/src/main.scss
@@ -106,7 +106,7 @@ body {
 #burger {
     $bar-height: 3px;
     position: absolute;
-    top: 40px;
+    top: 30px;
     right: 20px;
     width: 20px;
     height: $bar-height * 5;
@@ -337,7 +337,8 @@ body {
     @include mobile {
         width: 100%;
         margin-left: 0;
-        margin-top: 0;
+        margin-top: 15px;
+        height: calc(100% - 15px);
     }
 }
 
